Fix slider next/prev button width. fix video jumps on tile hover

--- a/app/blocks/common.blocks/tiles-list/tiles-list.scss
+++ b/app/blocks/common.blocks/tiles-list/tiles-list.scss
@@ -117,7 +117,7 @@
   & .slider-button-next {
     opacity: 1;
     z-index: 100;
-    width: 50px;
+    width: 70px;
     height: var(--sm-tile-height);
     display: flex;
     position: absolute;
@@ -132,12 +132,19 @@
     @include breakpoint(md) {
       opacity: 0;
     }
+    @include breakpoint(xl) {
+      width: 100px;
+    }
 
     &:hover,
     &:active,
     &:focus {
       opacity: 1;
       transition-delay: 0s;
+    }
+
+    & > img {
+      width: 30px;
     }
   }
   & .slider-button-prev {
@@ -153,6 +160,8 @@
     background: linear-gradient(to left, #141414, transparent);
   }
   & .swiper-button-disabled {
-    display: none !important;
+    opacity: 0 !important;
+    cursor: default;
+    width: 40px;
   }
 }
